assets/css/style.css
/* Global style and background colour */
body {
    background-color: #d5d5d5;
    font-family: 'Roboto Mono', monospace;
    text-align: center;
}

/* Heading */
.header {
    background-color: #334d5c;
    text-align: center;
    padding: 0.05rem;

}

/* How to play button */

.instructions-btn {
    color: white;
    padding-right: 1rem;
    font-size: 0.9rem;
    background-color: transparent;
    border: none;
    margin: 0.8rem;
    font-size: 1rem;
    padding: 0.7rem;
    border-radius: 0.5rem;
    cursor: pointer;
    transition: 0.1s all linear;
}

.instructions-btn:hover {
    background-color: #334d5c;
    border: 3px solid white;
}

/*Modal*/

.modal-container {
    box-sizing: border-box;
    display: none;
    background-color: #1e5d88;
    color: white;

    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}


.modal {
    position: fixed;
    z-index: 1;
    /* Sit on top */
    padding-top: 10px;
    padding-bottom: 10px;
    /* Location of the box */
    margin: auto;
        left: 50px;
        right: 50px;
            top: 2em;
    bottom: 5rem;
    width: 40%;
    /* Full width */
    height: 40%;
    /* Full height */
    overflow: auto;
    /* Enable scroll if needed */
    background-color: #1e5d88;
}

.modal-content {
    color: white;

}

/* The Close Button */
#close-modal {
    float: center;
    background-color: #d5d5d5;
    color: #1e5d88;
    border: 3px solid #1e5d88;
    margin: 0.8rem;
    font-size: 1rem;
    padding: 0.7rem;
    border-radius: 0.5rem;
    cursor: pointer;
    transition: 0.2s all linear;
}


#close-modal:hover,
#close-modal:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
    
} 

/*
#close-modal:hover {
    background-color: #55ad7a;
    border: 3px solid #334d5c;
cursor: pointer;
}  */

/* Reset button */
  #reset-button {
    display: flexi;
    align-items: center;
    margin: auto;
    display: none;
        float: center;
        background-color: #334d5c;
        color: white;
        border: 3px solid black;
        margin: 0.8rem;
        font-size: 1rem;
        padding: 0.7rem;
        border-radius: 0.5rem;
        cursor: pointer;
        transition: 0.2s all linear;
    }
#reset-button:hover {
    background-color: #1e5d88;
        border: 3px solid white;
        cursor: pointer;
}


/* Game area */

.game-area {
    width: 85%;
    height: 65vh;
    max-height: 450px;
    max-width: 830px;
    margin-left: auto;
    margin-right: auto;
    padding: 1%;
}

/* Hands */

/*.player-hand-scissors {
transform: scaleY(-1);
} */

.player-hand-scissors {
    font-size: 9rem;
    color: #55ad7a;
    /* transform: rotate(90deg) scale(-1, 1); */
    /* Flip horizontally for scissors */
}

/*
#computer-scissors {
    transform: rotateY(180deg);
}*/

.class-hand {
    font-size: 90%;
}

.player-hand {
    font-size: 9rem;
    color: #55ad7a;
    transform: rotate(90deg);
    /* Always face the specified direction */

}

.player-hand-rock {
    font-size: 9rem;
    color: #55ad7a;
    transform: rotate(90deg);
}

.player-hand-paper {
    font-size: 9rem;
    color: #55ad7a;
    transform: rotate(90deg);
}

.rotate-90 {
    transform: rotate(90deg);
}

.pc-hand {
    font-size: 9rem;
    color: #1e5d88;

}


/* Shake hands animations */
.shake-player {
    animation: shakePlayer 0.9s linear;
}

.shake-computer {
    animation: shakeComputer 0.9s linear;
}

.hands {
    display: flex;
    justify-content: space-around;
    align-items: center;
    text-align: center;
    padding-bottom: 3rem;
    padding-top: 2rem;
    margin-left: 5rem;
    margin-right: 5rem;
    border-left: 2rem;
    border-right: 2rem;
}

/* Other hands icons (hidden in HTML) */

.hide {
    display: none !important;

}

.hidden-hands-player {
    font-size: 9rem;
    color: #55ad7a;
    transform: rotate(90deg);

}

.hidden-hands-computer {
    font-size: 9rem;
    color: #1e5d88;
    /*transform: rotate(270deg);*/
}

.hidden-hand-scissors-player {
    font-size: 9rem;
    color: #55ad7a;
    /*transform: rotateY(180deg);*/
}

.transform {
    transform: rotateY(180deg);
}

.hidden-hand-scissors-computer {
    font-size: 9rem;
    color: #1e5d88;


}



/* Options */
.options {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.buttons {
    background-color: #d5d5d5;
    color: #1e5d88;
    border: 3px solid #1e5d88;
    margin: 0.8rem;
    font-size: 1rem;
    padding: 0.7rem;
    border-radius: 0.5rem;
    cursor: pointer;
    transition: 0.2s all linear;
}

.buttons:hover {
    background-color: #55ad7a;
    border: 3px solid #334d5c;

}

/* Animation for shaking hands (thanks to Code Grind) */
/* Shake player's hand */
@keyframes shakePlayer {
    0% {
        transform: rotate(-30deg);
    }

    25% {
        transform: rotate(30deg);
    }

    50% {
        transform: rotate(-30deg);
    }

    75% {
        transform: rotate(30deg);
    }

    100% {
        transform: rotate(0deg);
    }

}

/* Shake computer's hand */
@keyframes shakeComputer {
    0% {
        transform: rotate(30deg);
    }

    25% {
        transform: rotate(-30deg);
    }

    50% {
        transform: rotate(30deg);
    }

    75% {
        transform: rotate(-30deg);
    }

    100% {
        transform: rotate(0deg);
    }

}

/* Score area */

#player-score {
    color: #55ad7a;

}

#computer-score {
    color: #1e5d88;
}

.score-area {
    color: #23292e;
    font-weight: 500;
    display: flex;
    justify-content: space-around;
    align-items: center;
    font-size: 0.9rem;
}

/* Result area*/
#winner-result {
    color: #55ad7a;
    text-transform: uppercase;
    font-weight: bold;
    display: none;
    font-size: large;
}
#loser-result {
    color: #1e5d88;
    text-transform: uppercase;
    font-weight: bold;
    display: none;
    font-size: large;
}

/* Text: 'Can you beat the machine?'*/
h2 {
    color: #23292e;
    font-size: 3rem;
    padding: 1rem;
}

/* Footer */
footer {
    background-color: #334d5c;
    text-align: center;
    bottom: 0;
    width: 100%;
    height: 1.5rem;
    position: fixed;
    z-index: 99;
    bottom: 0;
    left: 0;
    right: 0;
}

/* GitHub icon */
.fa-github:before {
    color: white;
}

/* Media query for mobile devices (small screens: 320px — 480px) */
@media screen and (max-width: 480px) {

    /* To make sure that hands and buttons fit on mobiles */

#winner-result, #loser-result {
    margin: 0.5rem;

}

    .player-hand {
        font-size: 5rem;
    }

    .pc-hand {
        font-size: 5rem;
    }

    #button-rock,
    #button-paper {
        margin-bottom: 0.5rem;
    }

    .hands {
        display: flex;
        justify-content: space-around;
        align-items: center;
        text-align: center;
        padding-bottom: 1rem;
        padding-top: 1rem;
        margin-left: 1rem;
        margin-right: 1rem;
        margin-top: 0.5rem;
        border-left: 1rem;
        border-right: 1rem;
    }

    .options {
        margin: 0;
    }

    .buttons {
        background-color: #d5d5d5;
        color: #1e5d88;
        border: 3px solid #1e5d88;
        margin: 0.8rem;
        font-size: 1rem;
        padding: 0.5rem;
    }

    .score-area {
        display: flex;
    }

    

    h2 {
        margin-bottom: 0;
        margin-top: 1rem;
        font-size: 2rem;
    }

    /* Modal for mobiles */
    
        .modal {
            position: fixed;
            z-index: 1;
            /* Sit on top */
            padding-top: 1rem;
            padding-bottom: 1rem;
            padding-left: 2rem;
            padding-right: 2rem;
            /* Location of the box */
            margin: auto;
            left: 0.5rem;
            right: 0.5rem;
            top: 2rem;
            bottom: 1.5rem;
            width: 55%;
            /* Full width */
            height: 70%;
            /* Full height */
            overflow: auto;
            /* Enable scroll if needed */
            background-color: #1e5d88;
        }
    
        .scores{
            margin:0;
        }
                #reset-button {
                    display: flexi;
                    align-items: center;
                    margin: auto;
                    display: none;
                    float: center;
                    background-color: #334d5c;
                    color: white;
                    border: 3px solid black;
                    margin: 0.8rem;
                    font-size: 1rem;
                    padding: 0.2rem;
                    border-radius: 0.5rem;
                    cursor: pointer;
                    transition: 0.2s all linear;
                    margin: 0;
                }
}

